# bitprim-client

./: .gitignore  .travis-BITPRIM.yml  .travis.yml  CMakeLists.txt  README.md  bitprim-clientConfig.cmake.in  libbitcoin-clientConfig.cmake.in
examples/console/: client.cpp
include/bitcoin/client/: proxy.hpp
src/: proxy.cpp
